--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -5,5 +5,41 @@
     <meta charset="utf-8">  
 </head>
 <body>
+<header>
+    <img src= "logo"/>
+    <nav>
+        <ul>
+            <li>Registrer</li>
+            <li>Student Stop</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <article>
+        <input id="date" type="date" placeholder="Dato" /><br />      <--skal vi her velge å få frem en datoboks -->
+        <input id="klokke" type="??" placeholder="Klokke" /> <br />       <-- skal vi her velge å få frem klokka -->
+        <ul id="fra">
+            <li>HIØ Remmen</li>
+            <li>HIØ Kråkerøy</li>
+            <li>Halden</li>
+            <li>Sarpborg</li>
+            <li>Fredrikstad</li>
+        </ul>
+        <ul id="til">
+            <li>HIØ Remmen</li>
+            <li>HIØ Kråkerøy</li>
+            <li>Halden</li>
+            <li>Sarpborg</li>
+            <li>Fredrikstad</li>
+        </ul>
+        <input id="antall" type="number" placeholder="antall"/>
+        <input id="stk" type="number" placeholder="stk"/><br />
+        <button id="sok" type="button">SØK</button>  
+        <img url="RSS"/> <--sett inn link-->
+     </article>
+ <footer>
+     
+</footer>
+ </main>
 </body>
 </html>
