--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -16,30 +16,31 @@
 </header>
 <main>
     <article>
-        <input id="date" type="date" placeholder="Dato" /><br />      <--skal vi her velge å få frem en datoboks -->
-        <input id="klokke" type="??" placeholder="Klokke" /> <br />       <-- skal vi her velge å få frem klokka -->
-        <ul id="fra">
-            <li>HIØ Remmen</li>
-            <li>HIØ Kråkerøy</li>
-            <li>Halden</li>
-            <li>Sarpborg</li>
-            <li>Fredrikstad</li>
-        </ul>
-        <ul id="til">
-            <li>HIØ Remmen</li>
-            <li>HIØ Kråkerøy</li>
-            <li>Halden</li>
-            <li>Sarpborg</li>
-            <li>Fredrikstad</li>
-        </ul>
-        <input id="antall" type="number" placeholder="antall"/>
-        <input id="stk" type="number" placeholder="stk"/><br />
+        <input id="date" type="date" placeholder="Dato" /><br />     <!-- --skal vi her velge å få frem en datoboks --> 
+        <input id="klokke" type="??" placeholder="Klokke" /> <br />      <!--  <-- skal vi her velge å få frem klokka --> 
+        <select id="fra">
+            <option value="remmen">HIØ Remmen</option>
+            <option value="krokeroy">HIØ Kråkerøy</option>
+            <option value="halden">Halden</option>
+            <option value="sarpsborg">Sarpborg</option>
+            <option value="fredrikstad">Fredrikstad</option>
+        </select>
+        <select id="til">
+            <option value="remmen">HIØ Remmen</option>
+            <option value="krokeroy">HIØ Kråkerøy</option>
+            <option value="halden">Halden</option>
+            <option value="sarpsborg">Sarpborg</option>
+            <option value="fredrikstad">Fredrikstad</option>
+        </select><br />
+        <input id="antall" type="number" placeholder="Antall"/>
+        <input id="stk" type="number" placeholder="Stk"/><br />
         <button id="sok" type="button">SØK</button>  
-        <img url="RSS"/> <--sett inn link-->
+        <img url="RSS"/> <!-- <--sett inn link--> -->
      </article>
- <footer>
+<footer>
      
 </footer>
- </main>
+</main>
 </body>
 </html>
+
