--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Oblig 2 og 3</title>
+    <title>Student_Stopp</title>
     <meta charset="utf-8">  
 </head>
 <body>
