--- a/oblig2og3/html/index.html
+++ b/oblig2og3/html/index.html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Student_Stopp</title>
+    <meta charset="utf-8">  
+</head>
+<body>
+<header>
+    <img src= "logo"/>
+    <nav>
+        <ul>
+            <li>Registrer</li>
+            <li>Student Stop</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <article>
+        <input id="date" type="date" placeholder="Dato" /><br />     <!-- --skal vi her velge å få frem en datoboks --> 
+        <input id="klokke" type="??" placeholder="Klokke" /> <br />      <!--  <-- skal vi her velge å få frem klokka --> 
+        <select id="fra">
+            <option value="remmen">HIØ Remmen</option>
+            <option value="krokeroy">HIØ Kråkerøy</option>
+            <option value="halden">Halden</option>
+            <option value="sarpsborg">Sarpborg</option>
+            <option value="fredrikstad">Fredrikstad</option>
+        </select>
+        <select id="til">
+            <option value="remmen">HIØ Remmen</option>
+            <option value="krokeroy">HIØ Kråkerøy</option>
+            <option value="halden">Halden</option>
+            <option value="sarpsborg">Sarpborg</option>
+            <option value="fredrikstad">Fredrikstad</option>
+        </select><br />
+        <input id="antall" type="number" placeholder="Antall"/>
+        <input id="stk" type="number" placeholder="Stk"/><br />
+        <button id="sok" type="button">SØK</button>  
+        <img url="RSS"/> <!-- <--sett inn link--> -->
+     </article>
+<footer>
+     
+</footer>
+</main>
+</body>
+</html>
