--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Student_Stopp</title>
-    <meta charset="utf-8">  
+    <meta charset="utf-8">
+    
 </head>
 <body>
     <header>
@@ -16,8 +17,8 @@
     </header>
     <main>
         <article>
-            <input id="date" type="date" placeholder="Dato" /><br />     <!-- --skal vi her velge å få frem en datoboks --> 
-            <input id="klokke" type="??" placeholder="Klokke" /> <br />      <!--  <-- skal vi her velge å få frem klokka --> 
+            <input id="date" type="date" placeholder="Dato" /><br />     <!-- skal vi her velge å få frem en datoboks --> 
+            <input id="klokke" type="??" placeholder="Klokke" /> <br />      <!-- skal vi her velge å få frem klokka --> 
             <select id="fra">
                 <option value="remmen">HIØ Remmen</option>
                 <option value="krokeroy">HIØ Kråkerøy</option>
