--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -3,7 +3,9 @@
 <head>
     <title>Student_Stopp</title>
     <meta charset="utf-8">
-    
+    <link href="" rel="stylesheet" type="text/css">
+    <link href="" rel="stylesheet" type="text/css">
+    <link href="" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
@@ -16,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <article>
+        <article class="skjema">
             <input id="date" type="date" placeholder="Dato" /><br />     <!-- skal vi her velge å få frem en datoboks --> 
             <input id="klokke" type="??" placeholder="Klokke" /> <br />      <!-- skal vi her velge å få frem klokka --> 
             <select id="fra">
@@ -36,10 +38,12 @@
             <input id="antall" type="number" placeholder="Antall"/>
             <input id="stk" type="number" placeholder="Stk"/><br />
             <button id="sok" type="button">SØK</button>  
-            <img url="RSS"/> <!-- <--sett inn link--> -->
+            <img url="RSS"/> <!-- sett inn link -->
          </article>
+        <main class="bacground"> 
+        </main>
     <footer>
-
+        <p class="forfatter"></p>
     </footer>
     </main>
 </body>
