--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -3,12 +3,12 @@
 <head>
     <title>Student_Stopp</title>
     <meta charset="utf-8">
-    <link href="" rel="stylesheet" type="text/css">
-    <link href="" rel="stylesheet" type="text/css">
-    <link href="" rel="stylesheet" type="text/css">
+    <link href="responsivt.css" rel="stylesheet" type="text/css"> <!-- Disegn -->
+    <link href="print.css" rel="stylesheet" type="text/css"> <!-- Print ark -->
+    <link href="studentstopp.js" rel="stylesheet" type="text/css"> <!-- programeringen til "registrering -->
 </head>
 <body>
-    <header>
+    <header class="topp">
         <img src= "logo"/>
         <nav>
             <ul>
