--- a/oblig2og3/html/registrering.html
+++ b/oblig2og3/html/registrering.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Student_Stopp</title>
+    <meta charset="utf-8">
+    <link href="responsivt.css" rel="stylesheet" type="text/css"> <!-- Disegn -->
+    <link href="print.css" rel="stylesheet" type="text/css"> <!-- Print ark -->
+    <link href="studentstopp.js" rel="stylesheet" type="text/css"> <!-- programeringen til "registrering -->
+</head>
+<body>
+    <header class="topp">
+        <img src= "logo"/>
+        <nav>
+            <ul>
+                <li>Registrer</li>
+                <li>Student Stop</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article class="registrering">
+          Brukernavn:
+            <input type="text" id="txtBrukerNavn" /> <!--Bruker navn box -->
+              <br /><br />
+          Passord:
+            <input type="password" id="txtPassord" /> <!-- Passord box -->
+              <br /><br />
+          Bekreft passord:
+            <input type="password" id="txtBekreft" /> <!-- Bekreft passord box -->
+              <br /><br />
+            <button type="button" id="btnReg">Registrering</button> <!-- Registrerings knapp -->
+            <p id="print">Fyll inn ønsket brukernavn, passord og alder</p> <!-- Utskrift -->
+         </article>
+        <main class="bacground">
+        </main>
+    <footer>
+        <p class="forfatter"></p>
+    </footer>
+    </main>
+</body>
+</html>
