--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -12,7 +12,7 @@
         <img src= "logo"/>
         <nav>
             <ul>
-                <li>Registrer</li>
+                <li><a href="html/registrering.html">Registrer<a/></li>
                 <li>Student Stop</li>
             </ul>
         </nav>
