--- a/oblig2og3/html/registrering.html
+++ b/oblig2og3/html/registrering.html
@@ -12,8 +12,8 @@
         <img src= "logo"/>
         <nav>
             <ul>
-                <li>Registrer</li>
-                <li>Student Stop</li>
+                <li><a href="html/registrering.html">Registrer</a></li>
+                <li><a href="html/omoss.html">Om oss</a></li>
             </ul>
         </nav>
     </header>
