--- a/oblig2og3/html/omoss.html
+++ b/oblig2og3/html/omoss.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Student_Stopp</title>
+    <meta charset="utf-8">
+    <link href="css/responsivt.css" rel="stylesheet" type="text/css"> <!-- Disegn -->
+    <link href="css/print.css" rel="stylesheet" type="text/css"> <!-- Print ark -->
+    <link href="js/studentstopp.js" rel="stylesheet" type="text/css"> <!-- programeringen til "registrering -->
+</head>
+<body>
+    <header class="topp">
+        <img src= "logo"/>
+        <nav>
+            <ul>
+                <li><a href="html/registrering.html">Registrer</a></li>
+                <li><a href="html/omoss.html">Om oss</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article class="omoss">
+          <p class="info"></p>
+         </article>
+        <main class="bacground"> 
+        </main>
+    <footer>
+        <p class="forfatter"></p>
+    </footer>
+    </main>
+</body>
+</html>
