--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>Student_Stopp</title>
     <meta charset="utf-8">
-    <link href="css/responsivt.css" rel="stylesheet" type="text/css"> <!-- Disegn -->
-    <link href="css/print.css" rel="stylesheet" type="text/css"> <!-- Print ark -->
-    <link href="js/studentstopp.js" rel="stylesheet" type="text/css"> <!-- programeringen til "registrering -->
+    <link href="css/responsivt.css" rel="stylesheet" type="text/css">       <!-- Design -->
+    <link href="css/print.css" rel="stylesheet" type="text/css">            <!-- Print ark -->
+    <link href="js/studentstopp.js" rel="stylesheet" type="text/css">       <!-- Programeringen til "registrering -->
+    <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed -->
 </head>
 <body>
     <header class="topp">
