--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -39,11 +39,13 @@
             <input id="antall" type="number" placeholder="Antall"/>
             <input id="stk" type="number" placeholder="Stk"/><br />
             <button id="sok" type="button">SØK</button>  
-            <img url="RSS"/> <!-- sett inn link -->
          </article>
-        <main class="bacground"> 
+        <main class="background"> 
         </main>
     <footer>
+         <img url="RSS"/> <!-- sett inn link til RSS logo -->
+         <img url="Facebook"/> <!-- sett inn link til RSS logo -->
+         <img url="Twitter"/> <!-- sett inn link til RSS logo -->
         <p class="forfatter"></p>
     </footer>
     </main>
