--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Student Stopp</title>
     <meta charset="UTF-8">
-    <link href="studentStoppStyle.css" rel="stylesheet" type="text/css">       <!-- Design -->
+    <link href="responsivt.css" rel="stylesheet" type="text/css">       <!-- Design -->
     <link href="css/print.css" rel="stylesheet" type="text/css">            <!-- Print ark -->
     <link href="js/studentstopp.js" rel="stylesheet" type="text/css">       <!-- Programeringen til "registrering -->
     <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed -->
