--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -6,7 +6,7 @@
     <link href="responsivt.css" rel="stylesheet" type="text/css">       <!-- Design -->
     <link href="css/print.css" rel="stylesheet" type="text/css">            <!-- Print ark -->
     <link href="js/studentstopp.js" rel="stylesheet" type="text/css">       <!-- Programeringen til "registrering -->
-    <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed -->
+    <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed xml-->
 </head>
 <body>
 	<header class="navigasjonsmeny">
@@ -64,7 +64,8 @@
     	</section>
     </main>
     <footer>
-         <img url="RSS"/> <!-- sett inn link til RSS logo -->
+         <link rel="stylesheet" href="http://icono-49d6.kxcdn.com/icono.min.css"> <!--eller så kan vi legge til bilde også-->
+	 <img url="RSS"/> <!-- sett inn link til RSS logo -->
          <img url="Facebook"/> <!-- sett inn link til RSS logo -->
          <img url="Twitter"/> <!-- sett inn link til RSS logo -->
         <p class="forfatter"></p>
