--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -13,8 +13,9 @@
         <img src="studentstopp.jpg" alt="Logoen til Student Stopp" class="logo"/>
         <nav>
             <ul>
-                <li class="liNavigasjon">Om Student Stopp</li>
-                <li class="liNavigasjon">Logg inn/Registrer deg</li>
+                <li class="liNavigasjon">Student Stopp</li>
+                <li class="liNavigasjon">Logg inn</li>
+		<li class="liNavigasjon">Registrer deg</li>
             </ul>
         </nav>
     </header>
