--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -3,19 +3,18 @@
 <head>
     <title>Student Stopp</title>
     <meta charset="UTF-8">
-    <link href="responsivt.css" rel="stylesheet" type="text/css">       <!-- Design -->
+    <link href="studentStoppStyle.css" rel="stylesheet" type="text/css">       <!-- Design -->
     <link href="css/print.css" rel="stylesheet" type="text/css">            <!-- Print ark -->
     <link href="js/studentstopp.js" rel="stylesheet" type="text/css">       <!-- Programeringen til "registrering -->
-    <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed xml-->
+    <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed -->
 </head>
 <body>
 	<header class="navigasjonsmeny">
         <img src="studentstopp.jpg" alt="Logoen til Student Stopp" class="logo"/>
         <nav>
             <ul>
-                <li class="liNavigasjon">Student Stopp</li>
-                <li class="liNavigasjon">Logg inn</li>
-		<li class="liNavigasjon">Registrer deg</li>
+                <li class="liNavigasjon"><a class="aLiNavigasjon" href="omstudentstopp.html">Om Student Stopp</a></li>
+                <li class="liNavigasjon"><a class="aLiNavigasjon" href="logginn.html">Logg inn/Registrer deg</a></li>
             </ul>
         </nav>
     </header>
@@ -33,8 +32,7 @@
 		            	<p>Klokkeslett:</p>
 		            	<p>Frå:</p>
 		            	<p>Til:</p>
-		            	<p>Antall personer:</p>
-		            	<p class="mainSelectTekstP">???????????</p>
+		            	<p class="mainSelectTekstP">Antall personer:</p>
 		            </section>
 		            <section class="mainSelectVerdi">
 		                <input class="mainInput" type="date" placeholder="Dato" />     <!-- --skal vi her velge å få frem en datoboks --> 
@@ -54,7 +52,6 @@
 		                    <option class="mainSelectOption" value="fredrikstad">Fredrikstad</option>
 		                </select>
 		                <input class="mainInput" type="number" placeholder="Antall"/>
-		                <input class="mainInput" type="number" placeholder="Stk"/>  
 		                <img url="RSS"/> <!-- <--sett inn link-->
 		            </section>
 		        </section>
@@ -65,8 +62,7 @@
     	</section>
     </main>
     <footer>
-         <link rel="stylesheet" href="http://icono-49d6.kxcdn.com/icono.min.css"> <!--eller så kan vi legge til bilde også-->
-	 <img url="RSS"/> <!-- sett inn link til RSS logo -->
+         <img url="RSS"/> <!-- sett inn link til RSS logo -->
          <img url="Facebook"/> <!-- sett inn link til RSS logo -->
          <img url="Twitter"/> <!-- sett inn link til RSS logo -->
         <p class="forfatter"></p>
