--- a/oblig2og3/html/registrering.html
+++ b/oblig2og3/html/registrering.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="html/registrering.html">Registrer</a></li>
-                <li><a href="html/omoss.html">Om oss</a></li>
+                <li><a href="html/omstudentstopp.html">Om Student Stopp</a></li>
             </ul>
         </nav>
     </header>
