--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Stopp</title>
+	<title>Student Stopp</title>
     <meta charset="UTF-8">
     <link href="studentStoppStyle2.css" rel="stylesheet" type="text/css">       <!-- Design -->
-   <!--  <link href="css/print.css" rel="stylesheet" type="text/css">             Print ark -->
-   <!--  <link href="js/studentstopp.js" rel="stylesheet" type="text/css">       Programeringen til "registrering -->
-   <!-- <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  RSS feed -->
+    <link href="css/print.css" rel="stylesheet" type="text/css">             <!-- Print ark -->
+   	<link href="js/studentstopp.js" rel="stylesheet" type="text/css">       <!-- Programeringen til "registrering -->
+   	<link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!-- RSS feed -->
 </head>
 <body>
 	<header class="navigasjonsmeny">
@@ -19,8 +19,6 @@
         </nav>
     </header>
     <main>
-    	<!-- VIKTIG! ikkje ta vekk &nbsp; i linja under! Den trengs for å skilje margin i class "mainBakgrunnsbilete" og "mainSkjema". -->
-    	<!-- Lat det ovanfor stå intill videre, løysing #2 i css-ark; testing ser positivt ut -->
     	<section class="mainBakgrunnsbilete">
     		<button id="btnTilPassasjer" type="button">Finn tur</button>
     		<button class="btnTilSjaafor" type="button">Lei ut tur</button>
