--- a/oblig2og3/html/omstudentstopp.html
+++ b/oblig2og3/html/omstudentstopp.html
@@ -41,9 +41,16 @@
     	</section>
     </main>
     <footer>
-         <img url="RSS"/> <!-- sett inn link til RSS logo -->
-         <img url="Facebook"/> <!-- sett inn link til RSS logo -->
-         <img url="Twitter"/> <!-- sett inn link til RSS logo -->
+         <svg id="svg1" xmls="http://www.w3.org/2000/svg" width="0" height="0">
+ 		 <img src="rssLogo.svg" width="64px" height="64px" onerror="this.src='rssBackupLogo.png'">
+	 <svg id="svg2" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+ 		 <img src="twitterLogo.svg" width="64px" height="64px" onerror="this.src='twitterLogo2.png'">
+	</svg>
+	<!--Twitter logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
+	av nettsiden vår -->
+	<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+   		<img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
+	</svg><br>
         <p class="forfatter"></p>
     </footer>
 </body>
