--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -70,11 +70,10 @@
 	<svg id="svg2" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
  		 <img src="twitterLogo.svg" width="64px" height="64px" onerror="this.src='twitterLogo2.png'">
 	</svg>
-	<!--Twitter logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
-	av nettsiden vår -->
 	<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
    		 <img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
-	</svg><br>
+	</svg><!--Twitter/facebook logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
+	av nettsiden vår --><br>
         <p class="forfatter"></p>
     </footer>
 </body>
