--- a/oblig2og3/index.html
+++ b/oblig2og3/index.html
@@ -74,6 +74,29 @@
    		 <img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
 	</svg><!--Twitter/facebook logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
 	av nettsiden vår --><br>
+	
+	<?xml version="1.0" encoding="UTF-8" ?>
+	<rss version="2.0">
+
+	<channel>
+ 	 <title>Student Stopp</title>
+ 	 	<link>http://www.it-stud.hiof.no/mortenok/wuobli3/studentstopp/</link>
+ 	 	<description>Nyhetesfeed fra Student Stopp</description>
+  	 	<language>no</language>
+ 		 <pubDate>Mon,12 Oct 2016 12:00 GMT</pubDate>
+  		 <item>
+         <title>Siste nytt fra Student Stopp</title>
+        	 <link>http://www.it-stud.hiof.no/mortenok/wuoblig3/studentstopp/</link>
+         	<description>Her finner du de siste hendelsene på Student Stop</description>
+         	</item>
+        	 <item>
+         <title>Nyhet om samkjøring fra HIØ</title>
+        	 <link>http://www.hiof.no</link>
+        	 <description>Nyheter om samkjøring fra HiØ.</description>
+        	 </item>
+         </channel>
+         </rss>
+
         <p class="forfatter"></p>
     </footer>
 </body>
