--- a/oblig2og3/html/omstudentstopp.html
+++ b/oblig2og3/html/omstudentstopp.html
@@ -51,6 +51,27 @@
 	<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
    		<img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
 	</svg><br>
+	<?xml version="1.0" encoding="UTF-8" ?>
+	<rss version="2.0">
+
+	<channel>
+ 	 <title>Student Stopp</title>
+ 	 	<link>http://www.it-stud.hiof.no/mortenok/wuobli3/studentstopp/</link>
+ 	 	<description>Nyhetesfeed fra Student Stopp</description>
+  	 	<language>no</language>
+ 		 <pubDate>Mon,12 Oct 2016 12:00 GMT</pubDate>
+  		 <item>
+         <title>Siste nytt fra Student Stopp</title>
+        	 <link>http://www.it-stud.hiof.no/mortenok/wuoblig3/studentstopp/</link>
+         	<description>Her finner du de siste hendelsene på Student Stop</description>
+         	</item>
+        	 <item>
+         <title>Nyhet om samkjøring fra HIØ</title>
+        	 <link>http://www.hiof.no</link>
+        	 <description>Nyheter om samkjøring fra HiØ.</description>
+        	 </item>
+         </channel>
+         </rss>
         <p class="forfatter"></p>
     </footer>
 </body>
