--- a/oblig2og3/html/logginn.html
+++ b/oblig2og3/html/logginn.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Student Stopp</title>
+    <meta charset="UTF-8">
+    <link href="css/studentstopp.css" rel="stylesheet" type="text/css">       <!-- Design -->
+    <link href="print.css" rel="stylesheet" type="text/css">             <!-- Print ark -->
+   	<script src="js/studentstopp.js"></script>       <!-- Programeringen til "registrering -->
+   	<link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!-- RSS feed -->
+</head>
+<body class="blogg">
+	<header class="navigasjonsmeny">
+        <img src="bilder/studentstopp.jpg" alt="Logoen til Student Stopp" class="logo"/>
+        <nav>
+            <ul>
+                <li class="liNavigasjon"><a class="aLiNavigasjon" href="omstudentstopp.html">Om Student Stopp</a></li>
+                <li class="liNavigasjon"><a class="aLiNavigasjon" href="logginn.html">Logg inn</a></li>
+                <li class="liNavigasjon"><a class="aLiNavigasjon" href="registrer.html">Registrer</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="logg">
+      Brukernavn:
+        <input type="text" id="txtBruker" /> <!--Bruker navn box -->
+          <br /><br />
+      Passord:
+        <input type="password" id="txtPass" /> <!-- Passord box -->
+          <br /><br />
+        <button type="button" id="btnLogg">Registrering</button> <!-- Registrerings knapp -->
+          <p id="print">Logg inn med brukernavn og passord</p> <!-- Utskrift -->
+    </main>
+    <footer>
+         <img url="RSS"/> <!-- sett inn link til RSS logo -->
+         <img url="Facebook"/> <!-- sett inn link til RSS logo -->
+         <img url="Twitter"/> <!-- sett inn link til RSS logo -->
+        <p class="forfatter"></p>
+    </footer>
+</body>
+</html>
