--- a/oblig2og3/html/omstudentstopp.html
+++ b/oblig2og3/html/omstudentstopp.html
@@ -43,15 +43,8 @@
     <footer>
          <svg id="svg1" xmls="http://www.w3.org/2000/svg" width="0" height="0">
  		 <img src="rssLogo.svg" width="64px" height="64px" onerror="this.src='rssBackupLogo.png'">
-	 <svg id="svg2" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
- 		 <img src="twitterLogo.svg" width="64px" height="64px" onerror="this.src='twitterLogo2.png'">
-	</svg>
-	<!--Twitter logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
-	av nettsiden vår -->
-	<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-   		<img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
-	</svg><br>
-	<?xml version="1.0" encoding="UTF-8" ?>
+	 </svg><br>
+	 <?xml version="1.0" encoding="UTF-8" ?>
 	<rss version="2.0">
 
 	<channel>
@@ -71,7 +64,16 @@
         	 <description>Nyheter om samkjøring fra HiØ.</description>
         	 </item>
          </channel>
-         </rss>
+         </rss><br>   
+	 <svg id="svg2" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+ 		 <img src="twitterLogo.svg" width="64px" height="64px" onerror="this.src='twitterLogo2.png'">
+	</svg>
+	<!--Twitter logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
+	av nettsiden vår -->
+	<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+   		<img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
+	</svg><br>
+	
         <p class="forfatter"></p>
     </footer>
 </body>
