--- a/oblig2og3/html/omstudentstopp.html
+++ b/oblig2og3/html/omstudentstopp.html
@@ -7,6 +7,7 @@
     <link href="css/print.css" rel="stylesheet" type="text/css">            <!-- Print ark -->
     <link href="js/studentstopp.js" rel="stylesheet" type="text/css">       <!-- Programeringen til "registrering -->
     <link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!--RSS feed -->
+    <link href="rss.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<header class="navigasjonsmeny">
@@ -41,7 +42,41 @@
     	</section>
     </main>
     <footer>
-        
+        <svg id="svg1" xmls="http://www.w3.org/2000/svg" width="0" height="0">
+ 	 <img src="rssLogo.svg" width="64px" height="64px" onerror="this.src='rssBackupLogo.png'">
+	</svg>
+	<svg id="svg2" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+  	 <img src="twitterLogo.svg" width="64px" height="64px" onerror="this.src='twitterLogo2.png'">
+	</svg>
+	<!--Twitter logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
+	av nettsiden vår -->
+	<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+    	 <img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
+	</svg><br>
+	<?xml version="1.0" encoding="UTF-8" ?>
+
+	<rss version="2.0">
+
+	<channel>
+  	<item>
+  	<title>Student Stopp</title>
+  	<link>http://www.it-stud.hiof.no/mortenok/wuobli3/studentstopp/</link>
+  	<description>Nyhetsfeed fra Student Stopp</description>
+  	<language>no</language>
+  	<pubDate>Mon,12 Oct 2016 12:00 GMT</pubDate>
+  	</item>
+  	<item>
+  	<title>Siste nytt fra Student Stopp</title>
+  	<link>http://www.it-stud.hiof.no/mortenok/wuoblig3/studentstopp/</link>
+  	<description>Her finner du de siste hendelsene på Student Stop</description>
+  	</item>
+  	<item>
+  	<title>Nyhet om samkjøring fra HIØ</title>
+  	<link>http://www.hiof.no</link>
+  	<description>Nyheter om samkjøring fra HiØ.</description>
+  	</item>
+	</channel>
+	</rss>
 	
         <p class="forfatter"></p>
     </footer>
